# XRDKit

./: .gitignore  CITATION.cff  DEPLOY.md  LICENSE  README.md  ROADMAP.md  accurate_platinum_experimental.xy  accurate_rutilo_tio2_experimental.xy  app.py  launch.py  pyproject.toml  realistic_pt_experiment.xy  requirements.txt  test_xrd.xy  xrd_pemwe_interactive.ipynb
.streamlit/: config.toml
docs/: methodology.md
examples/observed_simulated_difference/: README.md  run_examples.py
examples/observed_simulated_difference/data/: realistic_iro2_experiment.xy
tests/: test_smoke.py
xrdkit/: __init__.py  cli.py  core.py  db.py  plot.py
